--- a/src/views/planning.njk
+++ b/src/views/planning.njk
@@ -1,3 +1,4 @@
+{%- set webpackChunk = 'planning' -%}
 {%- extends 'common/page.njk' -%}
 {%- import 'shared/templates/planning/render.njk' as render -%}
 {%- block content -%}
