Better handling for optionnal widgets css.

--- a/src/public/scss/widgets/planning.scss
+++ b/src/public/scss/widgets/planning.scss
@@ -1,3 +1,6 @@
+@import '../abstracts/variables';
+@import '../abstracts/mixins';
+
 // The header of the widget must be on front of the left column (labels)
 $zindex-planning-header: 30;
 // The labels must be in front of items when scroller horizontally.
