--- a/src/shared/templates/planning/widget.njk
+++ b/src/shared/templates/planning/widget.njk
@@ -3,7 +3,7 @@
   <div class="widget-planning-container">
     <div class="widget-planning-header">
       <div class="widget-planning-label">
-        Title...
+        {{ gettext('Planning') }}
       </div>
       <div class="widget-planning-calendar">
         <div class="widget-planning-weeks">
