Reading widget options. Fix: widget name is camelCase.

--- a/src/shared/templates/planning/widget.njk
+++ b/src/shared/templates/planning/widget.njk
@@ -7,7 +7,7 @@
       </div>
       <div class="widget-planning-calendar">
         <div class="widget-planning-weeks">
-          {% for i in range(1, planningProperties.nbWeeks) %}
+          {% for i in range(1, planningProperties.nbWeeks + 1) %}
             <div class="widget-planning-week">
               <div class="widget-planning-week-label">
                 <div>S0{{ i }}.</div>
