--- a/src/views/planning.njk
+++ b/src/views/planning.njk
@@ -2,5 +2,5 @@
 {%- extends 'common/page.njk' -%}
 {%- import 'shared/templates/planning/render.njk' as render -%}
 {%- block content -%}
-  <div data-widget="BopPlanning"></div>
+  <div data-widget="bopPlanning"></div>
 {%- endblock -%}
