--- a/src/shared/templates/planning/render.njk
+++ b/src/shared/templates/planning/render.njk
@@ -11,7 +11,7 @@
       </div>
       <div class="widget-planning-calendar">
         <div class="widget-planning-weeks">
-          {% for i in range(1, planningProperties.nbWeeks) %}
+          {% for i in range(1, planningProperties.nbWeeks + 1) %}
             <div class="widget-planning-week">
               <div class="widget-planning-week-days">
                 {% for j in range (1, 8) %}
