All widgets use the standard mecanism.

--- a/src/public/scss/widgets/sidebar.scss
+++ b/src/public/scss/widgets/sidebar.scss
@@ -1,3 +1,6 @@
+@import '../abstracts/variables';
+@import '../abstracts/mixins';
+
 .sidebar-wrapper {
   @include flex-v;
   background-color: $background-color-light;
