--- a/src/views/common/locale.njk
+++ b/src/views/common/locale.njk
@@ -1,5 +1,5 @@
 {% if changeLocaleInformations %}
-  <div data-widget-locale-change>
+  <div data-widget="bopLocaleChange" data-widget-locale-change>
     {{ gettext('Current locale:') }}
     <a>
       {{ locale }}
