--- a/src/views/common/page.njk
+++ b/src/views/common/page.njk
@@ -29,7 +29,7 @@
       </div>
     </header>
     <div class="hidden"
-      data-widget-sidebar
+      data-widget="bopSidebar"
       data-widget-sidebar-open="[data-main-sidebar-open]"
       data-widget-sidebar-close="[data-main-sidebar-close],[data-sidebar-close]"
     >
