--- a/src/public/scss/abstracts/_variables.scss
+++ b/src/public/scss/abstracts/_variables.scss
@@ -15,3 +15,8 @@ $background-color-filled-light: rgba(255, 255, 255, .15);
 $hover-transition-time: 150ms;
 
 $background-stripes-width: 5px;
+
+$waiting-wheel-border-color1: rgba(0, 0, 0, .1);
+$waiting-wheel-border-color2: rgba(0, 0, 0, .5);
+
+$waiting-mask-background-color: rgba(255, 255, 255, .6);
