--- a/src/public/scss/widgets/planning.scss
+++ b/src/public/scss/widgets/planning.scss
@@ -8,6 +8,26 @@ $zindex-planning-label: 20;
 // Items must be on front of the grid.
 $zindex-planning-item: 10;
 
+$widget-planning-default-color: rgb(34, 34, 34);
+
+$widget-planning-colors:
+'1' rgb(49, 74, 225),
+'2' rgb(39, 122, 245),
+'3' rgb(72, 177, 237),
+'4' rgb(56, 180, 176),
+'5' rgb(147, 182, 25),
+'6' rgb(226, 144, 0),
+'7' rgb(238, 103, 29),
+'8' rgb(120, 60, 37),
+'9' rgb(203, 27, 106),
+'10' rgb(162, 62, 187),
+'11' rgb(108, 55, 205),
+'unallocated' rgb(153, 153, 153),
+'partially' rgb(136, 205, 164),
+'full' rgb(34, 161, 85),
+'overloaded' rgb(237, 47, 54),
+'off' rgb(90, 95, 115);
+
 [data-widget='bopPlanning'] {
   height: 100%;
   // position relative is required for the inner waiting mask.
@@ -236,6 +256,7 @@ $zindex-planning-item: 10;
 
 .widget-planning-item-part {
   @include flex-v;
+  background-color: $widget-planning-default-color;
   bottom: 0;
   position: absolute;
   top: 0;
@@ -273,35 +294,9 @@ $zindex-planning-item: 10;
 }
 
 .widget-planning-split-inner {
+  background-color: $widget-planning-default-color;
   border-top: dotted 1px;
 }
-
-.widget-planning-item-part {
-  // default color
-  background-color: rgb(34, 34, 34);
-}
-
-.widget-planning-split-inner {
-  border-color: rgb(34, 34, 34);
-}
-
-$widget-planning-colors:
-'1' rgb(49, 74, 225),
-'2' rgb(39, 122, 245),
-'3' rgb(72, 177, 237),
-'4' rgb(56, 180, 176),
-'5' rgb(147, 182, 25),
-'6' rgb(226, 144, 0),
-'7' rgb(238, 103, 29),
-'8' rgb(120, 60, 37),
-'9' rgb(203, 27, 106),
-'10' rgb(162, 62, 187),
-'11' rgb(108, 55, 205),
-'unallocated' rgb(153, 153, 153),
-'partially' rgb(136, 205, 164),
-'full' rgb(34, 161, 85),
-'overloaded' rgb(237, 47, 54),
-'off' rgb(90, 95, 115);
 
 @each $color-name, $color in $widget-planning-colors {
   &[data-widget-planning-color='#{$color-name}'] {
