--- a/src/shared/templates/planning/render.njk
+++ b/src/shared/templates/planning/render.njk
@@ -1,3 +1,11 @@
+{% macro nodeMenuItem(node) %}
+  {% set items = [] %}
+  {% set tmp %}<li onclick="alert('yes');">Button 1</li>{% endset %}{% set tmp = items.push(tmp) %}
+  {% set tmp %}<li onclick="alert('yes indeed');">Button 2</li>{% endset %}{% set tmp = items.push(tmp) %}
+  {% if node %}{% set tmp %}<li data-widget="bopWheelmenu" data-widget-wheelmenu-items="{{ nodeMenuItem('') }}">Button 3</li>{% endset %}{% set tmp = items.push(tmp) %}{% endif %}
+  {% set tmp %}<li onclick="alert('yes');">Button 4</li>{% endset %}{% set tmp = items.push(tmp) %}
+  {{ items | dump }}
+{% endmacro %}
 {% macro planningNode(node, planningProperties) %}
   <div class="widget-planning-node"
     data-widget-planning-node-type="{{ node.type }}"
@@ -64,7 +72,10 @@
                 "
               >
                 <div class="widget-planning-item-inner">
-                  <div class="widget-planning-item-part">
+                  <div class="widget-planning-item-part"
+                    data-widget="bopWheelmenu"
+                    data-widget-wheelmenu-items="{{ nodeMenuItem(node) }}"
+                  >
                     <div class="widget-planning-task-txt-wrapper">
                       {{ stubGroup.label }}
                     </div>
