--- a/src/shared/templates/planning/render.njk
+++ b/src/shared/templates/planning/render.njk
@@ -1,9 +1,9 @@
 {% macro nodeMenuItem(node) %}
   {% set items = [] %}
-  {% set tmp %}<li onclick="alert('yes');">Button 1</li>{% endset %}{% set tmp = items.push(tmp) %}
-  {% set tmp %}<li onclick="alert('yes indeed');">Button 2</li>{% endset %}{% set tmp = items.push(tmp) %}
-  {% if node %}{% set tmp %}<li data-widget="bopWheelmenu" data-widget-wheelmenu-items="{{ nodeMenuItem('') }}">Button 3</li>{% endset %}{% set tmp = items.push(tmp) %}{% endif %}
-  {% set tmp %}<li onclick="alert('yes');">Button 4</li>{% endset %}{% set tmp = items.push(tmp) %}
+  {% set tmp %}<a onclick="alert('yes');">Button 1</a>{% endset %}{% set tmp = items.push(tmp) %}
+  {% set tmp %}<a onclick="alert('yes indeed');">Button 2</a>{% endset %}{% set tmp = items.push(tmp) %}
+  {% if node %}{% set tmp %}<a data-widget="bopWheelmenu" data-widget-wheelmenu-items="{{ nodeMenuItem('') }}">Button 3</a>{% endset %}{% set tmp = items.push(tmp) %}{% endif %}
+  {% set tmp %}<a onclick="alert('yes');">Button 4</a>{% endset %}{% set tmp = items.push(tmp) %}
   {{ items | dump }}
 {% endmacro %}
 {% macro planningNode(node, planningProperties) %}
