Wheelmenu WIP. Keyboard navigation.

--- a/src/public/scss/widgets/wheelmenu.scss
+++ b/src/public/scss/widgets/wheelmenu.scss
@@ -38,6 +38,10 @@ $widget-wheelmenu-item-border-color: $border-color-dark;
     &:focus {
       border-width: 2px;
     }
+
+    &.disabled {
+      background-color: $background-color-disabled;
+    }
   }
 }
 
