--- a/src/public/scss/abstracts/_variables.scss
+++ b/src/public/scss/abstracts/_variables.scss
@@ -6,6 +6,7 @@ $border-color-dark: #000;
 $border-color-light: rgba(0, 0, 0, .06);
 $border-color-filled-light: rgba(255, 255, 255, .15);
 
+$background-color-disabled: rgb(128, 128, 128);
 $background-color-empty: #FFF;
 $background-color-light: #F2F2F2;
 $background-color-light-hover: #F6F6F6;
