--- a/src/shared/templates/planning/render.njk
+++ b/src/shared/templates/planning/render.njk
@@ -1,7 +1,7 @@
 {% macro nodeMenuItem(node) %}
   {% set items = [] %}
   {% set tmp %}<a onclick="alert('yes');">Button 1</a>{% endset %}{% set tmp = items.push(tmp) %}
-  {% set tmp %}<a onclick="alert('yes indeed');">Button 2</a>{% endset %}{% set tmp = items.push(tmp) %}
+  {% set tmp %}<a class="disabled" onclick="alert('yes indeed');">Button 2</a>{% endset %}{% set tmp = items.push(tmp) %}
   {% if node %}{% set tmp %}<a data-widget="bopWheelmenu" data-widget-wheelmenu-items="{{ nodeMenuItem('') }}">Button 3</a>{% endset %}{% set tmp = items.push(tmp) %}{% endif %}
   {% set tmp %}<a onclick="alert('yes');">Button 4</a>{% endset %}{% set tmp = items.push(tmp) %}
   {{ items | dump }}
