First i18next migration pass. WIP

--- a/src/views/common/locale.njk
+++ b/src/views/common/locale.njk
@@ -1,6 +1,6 @@
 {% if changeLocaleInformations %}
   <div data-widget="bopLocaleChange">
-    {{ gettext('Current locale:') }}
+    {{ i18n.t('currentLocale') }}
     <a>
       {{ locale }}
     </a>
