--- a/src/shared/templates/planning/widget.njk
+++ b/src/shared/templates/planning/widget.njk
@@ -2,7 +2,7 @@
   <div class="widget-planning-container">
     <div class="widget-planning-header">
       <div class="widget-planning-label">
-        {{ gettext('Planning') }}
+        {{ i18n.t('title.planning') }}
       </div>
       <div class="widget-planning-calendar">
         <div class="widget-planning-weeks">
