--- a/src/views/login.html
+++ b/src/views/login.html
@@ -17,7 +17,7 @@
           <input type="password" name="password" placeholder="{{ i18n.t('field.password') }}" required>
           {% if loginFailed %}
             <div class="error">
-              {{ i18n.t('message.login_failed.') }}
+              {{ i18n.t('message.login_failed') }}
             </div>
           {% endif %}
           <input type="hidden" name="loginForm" value="1">
