i18next WIP: multiloader, code cleaning.

--- a/src/views/common/page.njk
+++ b/src/views/common/page.njk
@@ -2,7 +2,7 @@
 {#- You can override webpackChunk in childs templates or in backends context -#}
 {%- set webpackChunk = webpackChunk | default('main') -%}
 {%- import "common/webpack.njk" as webpack -%}
-<html lang="{{ lang }}" dir="{{ lang_dir }}" bop-context="{{ context | dump }}">
+<html lang="{{ language }}" dir="{{ languageDir }}" bop-context="{{ context | dump }}">
   <head>
     <meta charset="utf-8">
     <title>BOP</title>
