--- a/src/views/login.html
+++ b/src/views/login.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 {%- import "common/webpack.njk" as webpack -%}
-<html lang="{{ lang }}" dir="{{ lang_dir }}" bop-context="{{ context | dump }}">
+<html lang="{{ language }}" dir="{{ languageDir }}" bop-context="{{ context | dump }}">
   <head>
     <meta charset="utf-8">
     <title>BOP</title>
