--- a/src/views/common/page.njk
+++ b/src/views/common/page.njk
@@ -63,6 +63,6 @@
     <div class="page-content">
       {% block content %}{% endblock %}
     </div>
-    {{ webpack.bodyScripts(locale, webpackManifest, webpackChunk) }}
+    {{ webpack.bodyScripts(webpackManifest, webpackChunk) }}
   </body>
 </html>
