--- a/src/views/login.html
+++ b/src/views/login.html
@@ -34,6 +34,6 @@
       </footer>
     </div>
 
-    {{ webpack.bodyScripts(locale, webpackManifest, 'login') }}
+    {{ webpack.bodyScripts(webpackManifest, 'login') }}
   </body>
 </html>
