--- a/src/public/scss/abstracts/mixins/_effects.scss
+++ b/src/public/scss/abstracts/mixins/_effects.scss
@@ -1,9 +1,3 @@
 @mixin background-stripes($color1: $background-color-empty, $color2: $background-color-light, $width: $background-stripes-width) {
-  background: repeating-linear-gradient(
-    -45deg,
-    $color1,
-    $color1 $width,
-    $color2 $width,
-    $color2 ($width * 2)
-  );
+  background: repeating-linear-gradient(-45deg, $color1, $color1 $width, $color2 $width, $color2 ($width * 2));
 }
