--- a/src/public/scss/widgets/wheelmenu.scss
+++ b/src/public/scss/widgets/wheelmenu.scss
@@ -1,7 +1,7 @@
 @import '../abstracts/variables';
 @import '../abstracts/mixins';
 
-$widget-wheelmenu-background-color: rgba(128, 128, 128, .7);
+$widget-wheelmenu-background-color: rgba(128, 128, 128, 0.7);
 $widget-wheelmenu-zindex: 200;
 
 $widget-wheelmenu-item-background-color: $background-color-filled;
@@ -26,7 +26,7 @@ $widget-wheelmenu-item-border-color: $border-color-dark;
   position: absolute;
   width: 0;
 
-  &>* {
+  > * {
     background-color: $widget-wheelmenu-item-background-color;
     border: 1px solid $widget-wheelmenu-item-border-color;
     border-radius: 50%;
@@ -46,5 +46,5 @@ $widget-wheelmenu-item-border-color: $border-color-dark;
 }
 
 @keyframes wheelmenu-rotation {
-  0% { transform: rotate(0deg) scale(.1, .1); }
+  0% { transform: rotate(0deg) scale(0.1, 0.1); }
 }
